syntax = "proto3";

option csharp_namespace = "PurchaseServiceGrpc.Protos";

import "Protos/SharedGrpc.proto";
package PurchaseServiceGrpc;

service IPurchaseService
{
 rpc FindMatch (SaleOffer) returns (PurchaseRequestList);
}

message PurchaseRequestList {
    repeated PurchaseRequest PurchaseRequests = 1;
}

message PurchaseRequest {
    int32 StockId = 1;
    int32 Amount = 2;
    float Price = 3;
    int32 BuyerUserId = 4;
}

message SaleOffer {
    int32 StockId = 1;
    int32 Amount = 2;
    float Price = 3;
}
